<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:shrinkColumns="1"
        android:stretchColumns="1">
        
        <TableRow
            android:id="@+id/location_row"
            android:visibility="gone">

            <TextView
                android:paddingRight="3dp"
                android:text="@string/location"/>

            <TextView android:id="@+id/location"/>
        </TableRow>        
        
        <TableRow>

            <TextView
                android:id="@+id/length_label"
                android:paddingRight="3dp"
                android:text="@string/length"/>

            <TextView android:id="@+id/length"/>
        </TableRow>        
        
        <TableRow>

            <TextView
                android:id="@+id/type_label"
                android:paddingRight="3dp"
                android:text="@string/type"/>

            <TextView android:id="@+id/type"/>
        </TableRow>        
        
        <TableRow>

            <TextView
                android:id="@+id/lowercase_label"
                android:paddingRight="3dp"
                android:text="@string/use_lowercase"/>

            <TextView android:id="@+id/lowercase"/>
        </TableRow>        
        
        <TableRow>

            <TextView
                android:id="@+id/uppercase_label"
                android:paddingRight="3dp"
                android:text="@string/use_uppercase"/>

            <TextView android:id="@+id/uppercase"/>
        </TableRow>        
        
        <TableRow>

            <TextView
                android:id="@+id/digits_label"
                android:paddingRight="3dp"
                android:text="@string/use_digits"/>

            <TextView android:id="@+id/digits"/>
        </TableRow>        
        
        <TableRow>

            <TextView
                android:id="@+id/symbols_label"
                android:paddingRight="3dp"
                android:text="@string/use_symbols"/>

            <TextView android:id="@+id/symbols"/>
        </TableRow>        
        
    </TableLayout>

</ScrollView>