<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/current_group_panel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:visible="false">

        <ImageView
            android:id="@+id/up_icon"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:contentDescription="@string/up"
            android:src="@drawable/folder_up_rev"/>

        <ImageView
            android:id="@+id/home"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/home"
            android:src="@drawable/button_home"/>

        <TextView
            android:id="@+id/current_group_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/up_icon"
            android:layout_alignTop="@id/up_icon"
            android:layout_marginBottom="2dp"
            android:layout_toEndOf="@id/up_icon"
            android:layout_toLeftOf="@id/home"
            android:layout_toRightOf="@id/up_icon"
            android:layout_toStartOf="@id/home"
            android:gravity="center_vertical"
            android:text="@string/group"/>

        <View
            style="@style/Separator.Light"
            android:layout_below="@id/current_group_label"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/select_file_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:text="@string/select_file_label"/>

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:drawSelectorOnTop="false"
        android:fastScrollEnabled="true"/>

    <TextView
        android:id="@android:id/empty"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="3dp"
        android:layout_weight="1"
        android:text="@string/no_files"
        android:textSize="16sp"
        android:textStyle="bold"/>

</LinearLayout>
