<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="3dp">
    
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shrinkColumns="1"
                android:stretchColumns="1">

                <TableRow>

                    <TextView android:text="@string/name"/>

                    <EditText
                        android:id="@+id/name"
                        android:inputType="textCapWords"/>
                </TableRow>
                
                <TableRow>

                    <TextView android:text="@string/length"/>

                    <EditText
                        android:id="@+id/length"
                        android:inputType="number"/>
                </TableRow>

                <TableRow>

                    <TextView android:text="@string/type"/>

                    <Spinner
                        android:id="@+id/type"
                        android:entries="@array/policy_type"/>
                </TableRow>

            </TableLayout>
            
            <TableLayout
                android:id="@+id/options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shrinkColumns="2"
                android:stretchColumns="2">

                <TableRow android:id="@+id/lowercase_row">

                    <CheckBox
                        android:id="@+id/lowercase"
                        android:text="@string/use_lowercase"/>

                    <TextView
                        android:id="@+id/lowercase_label"
                        android:paddingLeft="3dp"
                        android:text="@string/at_least"/>

                    <EditText
                        android:id="@+id/lowercase_len"
                        android:inputType="number"/>
                </TableRow>

                <TableRow android:id="@+id/uppercase_row">

                    <CheckBox
                        android:id="@+id/uppercase"
                        android:text="@string/use_uppercase"/>

                    <TextView
                        android:id="@+id/uppercase_label"
                        android:paddingLeft="3dp"
                        android:text="@string/at_least"/>

                    <EditText
                        android:id="@+id/uppercase_len"
                        android:inputType="number"/>
                </TableRow>

                <TableRow android:id="@+id/digits_row">

                    <CheckBox
                        android:id="@+id/digits"
                        android:text="@string/use_digits"/>

                    <TextView
                        android:id="@+id/digits_label"
                        android:paddingLeft="3dp"
                        android:text="@string/at_least"/>

                    <EditText
                        android:id="@+id/digits_len"
                        android:inputType="number"/>
                </TableRow>

                <TableRow android:id="@+id/symbols_row">

                    <CheckBox
                        android:id="@+id/symbols"
                        android:text="@string/use_symbols"/>

                    <TextView
                        android:id="@+id/symbols_label"
                        android:paddingLeft="3dp"
                        android:text="@string/at_least"/>

                    <EditText
                        android:id="@+id/symbols_len"
                        android:inputType="number"/>
                </TableRow>
            </TableLayout>
                
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dip"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/symbol_set_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/symbol_set_default"
                        android:text="@string/default_symbols"/>

                    <RadioButton
                        android:id="@+id/symbol_set_custom"
                        android:text="@string/custom_symbols"/>
                </RadioGroup>

                <TextView
                    android:id="@+id/symbols_default"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/symbols_custom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#FF909090"/>

    <TextView
        android:id="@+id/error_msg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
 
</LinearLayout>